--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true  
 spring.h2.console.enabled=true
 
+spring.h2.console.path=/h2-console
+
 server.port=8081
+
+# ZooKeeper
+spring.zookeeper.port=${SPRING_ZOOKEEPER_PORT:2181}
