--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=testuser
 spring.datasource.password=pass123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 #to make sql queries visible and activate H2 console
 spring.jpa.show-sql=true  
