--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,16 @@ services:
     ports:
       - "2181:2181"
 
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile-test
+    depends_on:
+      - zookeeper
+    environment:
+      - ZOOKEEPER_HOST=zookeeper
+      - ZOOKEEPER_PORT=2181
+    command: mvn test
   url-shortener:
     build:
       context: .
